# resume-analysis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  logs  pyproject.toml  requirements.txt  vercel.json
api/: index.py
config/interviews/: AT.json  EX.json  GENCO.json  HF.json  HIRA.json  HRDK.json  HUG.json  HUMETRO.json  IBK.json  ICTR.json  IIAC.json  KAMCO.json  KDB.json  KDHC.json  KDIC.json  KDN.json  KEA.json  KECO.json  KEIS.json  KEPCO.json  KEXIM.json  KGS.json  KHNP.json  KIBO.json  KIC.json  KINFA.json  KISED.json  KNF.json  KNOC.json  KODIT.json  KOGAS.json  KOGAS_TECH.json  KOMSCO.json  KORAIL.json  KOROAD.json  KOSAF.json  KOSHA.json  KOSMES.json  KPS.json  KRC.json  (+13 more)
config/organizations/: AT.json  EX.json  GENCO.json  HF.json  HIRA.json  HRDK.json  HUG.json  HUMETRO.json  IBK.json  ICTR.json  IIAC.json  KAMCO.json  KDB.json  KDHC.json  KDIC.json  KDN.json  KEA.json  KECO.json  KEIS.json  KEPCO.json  KEXIM.json  KGS.json  KHNP.json  KIBO.json  KIC.json  KINFA.json  KISED.json  KNF.json  KNOC.json  KODIT.json  KOGAS.json  KOGAS_TECH.json  KOMSCO.json  KORAIL.json  KOROAD.json  KOSAF.json  KOSHA.json  KOSMES.json  KPS.json  KRC.json  (+14 more)
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/: link-test.html
scripts/: dev.sh  tdd-watch.sh
src/: main.py
test/: conftest.py  test_analyzer_api.py  test_api.py  test_feedback_analyzer.py  test_llm_service.py  test_models.py  test_organization.py  test_parser.py  test_schemas.py  test_section_classifier.py  test_skill_extractor.py
(+37 files in other folders)
